# InHuS_Social_Navigation

./: .gitignore  .gitmodules  1.start_all.sh  README.md  launch_morse_move_base.sh  parameters.txt
src/human_sim/: CMakeLists.txt  blocked.txt  config.rviz  graph.py  package.xml
src/human_sim/action/: ActionH.action
src/human_sim/config/: config.rviz  params.yaml
src/human_sim/include/: .task.h.swp  boss.h  humanBehaviorModel.h  humanModel.h  logManager.h  manipulate_path.hpp  placeRobot.h  poseLog.h  supervisor.h  task.h  taskPlanner.h  type.h  types.h
src/human_sim/launch/: all.launch  boss.launch  convert_poses.launch  human_controller.launch  human_sim.launch  human_sim2.launch  test_get_path.launch  tester.launch  with_nav.launch  with_nav2.launch
src/human_sim/logs/: all.py  corridor.txt  exec_graphs.py  graph.py  path_color.py  stable_after_installed.txt
src/human_sim/logs/old/: blocked_state.txt  new_blocked.txt  new_blocked_2.txt
src/human_sim/logs/older/old/: good_one.txt
src/human_sim/logs/older/test_hateb/: hateb_corridor.txt  move_base_avoidance.txt
src/human_sim/logs/stable/: back.txt  blocked.txt  laptop_installed.txt  stable_long.txt
src/human_sim/logs/test_hateb/: corridor_move_base.txt
src/human_sim/msg/: Action.msg
src/human_sim/src/: actionClient.cpp  actionServer.cpp  boss_node.cpp  controller_node.cpp  geoPlanner_node.cpp  humanBehaviorModel_node.cpp  humanBehaviorModel_node_back.cpp  humanModel_node.cpp  input_interface_node.cpp  logManager_node.cpp  lowLevelController_node.cpp  new_boss_node.cpp  placeRobot_node.cpp  poseLog_node.cpp  preprocessing_node.cpp  supervisor_node.cpp  supervisor_node_back.cpp  task.cpp  taskPlanner_node.cpp  tester_node.cpp
src/human_sim/srv/: ActionBool.srv  ChooseGoal.srv  ComputePlan.srv  GetChoiceGoalDecision.srv  HatebGoal.srv
src/inhus/inhus_navigation/: CMakeLists.txt
src/inhus/inhus_navigation/config/move_base_config/: costmap_global.yaml
src/inhus/inhus_navigation/include/: placeRobot.h
src/inhus/inhus_navigation/launch/mine/: mine_map_pov.launch  mine_map_static.launch  mine_stage_full.launch  mine_stage_locate.launch  mine_stage_simulator.launch
src/inhus/inhus_navigation/launch/morse_pr2_launch/: morse_pr2_full.launch  (+2 more)
src/inhus/inhus_navigation/maps/: laas_adream_simplified.pgm  laas_adream_simplified.yaml  open_space.pgm
src/inhus/inhus_navigation/rviz/: cohan_nav_morse.rviz  cohan_nav_stage.rviz  config.rviz
src/inhus/inhus_navigation/src/: placeRobot_node.cpp
src/inhus_system/inhus/: CMakeLists.txt  package.xml
src/inhus_system/inhus/config/: deactivate_replan.yaml  goals.xml  params.yaml
src/inhus_system/inhus/include/: boss.h  humanBehaviorModel.h  logManager.h  poseLog.h  supervisor.h  task.h  taskPlanner.h  types.h
src/inhus_system/inhus/launch/: all.launch  boss.launch  gui.launch  human_controller.launch
src/inhus_system/inhus/logs/: all.py  colored_path.py  exec_graphs.py  gui.py  readme.txt
src/inhus_system/inhus/msg/: Action.msg  Goal.msg  NamedGoal.msg  PoseGoal.msg  PoseVel.msg  WaitAction.msg
src/inhus_system/inhus/scripts/: start_gui.sh
src/inhus_system/inhus/src/: boss_node.cpp  humanBehaviorModel_node.cpp  logManager_node.cpp  lowLevelController_node.cpp  poseLog_node.cpp  supervisor_node.cpp  task.cpp  taskPlanner_node.cpp
src/inhus_system/inhus/srv/: ComputePlan.srv
src/inhus_system/inhus_navigation/: CMakeLists.txt  package.xml
src/inhus_system/inhus_navigation/config/: path_blockage_global_planner.yaml
src/inhus_system/inhus_navigation/include/: logManagerCohan.h  placeRobot.h
src/inhus_system/inhus_navigation/launch/: log_cohan.launch  manual_human_morse.launch  manual_human_stage.launch  manual_robot.launch  manual_robot_morse.launch  manual_robot_stage.launch
src/inhus_system/inhus_navigation/rviz/: cohan_nav_morse.rviz  cohan_nav_morse_human.rviz  cohan_nav_morse_human_robot.rviz  cohan_nav_stage.rviz  cohan_nav_stage_human.rviz  config.rviz  inhus.rviz
src/inhus_system/inhus_navigation/scripts/: cohan_nav.sh  inhus_cohan_nav.sh  inhus_nav.sh  inhus_wo_nav.sh
src/inhus_system/inhus_navigation/src/: agents_bridge.cpp  interface_morse_input_node.cpp  interface_morse_output_node.cpp  interface_stage_input_node.cpp  interface_stage_output_node.cpp  logManagerCohan_node.cpp  placeRobot_client_node.cpp  placeRobot_node.cpp  placeRobot_pub_node.cpp
src/morse_ros/: package.xml
src/morse_ros/blender_files/: laas_adream.blend  laas_adream_free_living_room.blend  laas_adream_full.blend  new_map_modified.blend  new_map_modified.blend1  pepper_low_poly.blend
src/morse_ros/launch/: fakerobot_scenario.launch  human_scenario.launch  pepper.launch  pepper_human_scenario.launch  pepper_scenario.launch  pr2.launch  pr2_human_scenario.launch  pr2_scenario.launch  pr2_tuck_arms.launch  scenario.launch  test.launch
src/morse_ros/scenarios/: fakerobot_laas_adream_scenario.py  human_laas_adream_scenario.py  human_tum_kitchen_scenario.py  laas_adream_scenario.py  pepper_human_laas_adream_scenario.py  pepper_laas_adream_scenario.py  pr2_human_laas_adream_scenario.py  pr2_human_laas_adream_scenario_orig.py  pr2_human_tum_kitchen_scenario.py  pr2_laas_adream_scenario.py  pr2_tum_kitchen_scenario.py  read_human_position.py  tum_kitchen_scenario.py
src/morse_ros/scripts/: start_morse.sh
src/morse_ros/urdf/: pepper.urdf  readme.md
src/move_human/: CMakeLists.txt  package.xml
src/move_human/config/: Hslow.yaml  costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml  rviz.rviz  slowH.yaml
src/move_human/include/: placeHuman.h  placeOther.h  placeRobot.h
src/move_human/launch/: all.launch  all2.launch  map.launch  move_base.launch  move_base2.launch  pov_map.launch  test_amcl.launch
src/move_human/maps/: laas_adream.pgm  pov.yaml  pov_back.pgm  pov_map.pgm
src/move_human/msg/: test_m.msg
src/move_human/src/: placeHuman_node.cpp  placeOther_node.cpp  placeRobot_node.cpp  test_pov_node.cpp
src/move_human/srv/: PlaceRobot.srv  Test.srv
src/simulators/morse_ros/morse_ros/: CMakeLists.txt  package.xml
(+337 files in other folders)
