<?xml version="1.0"?>
<package format="2">
  <name>inhus_navigation</name>
  <version>0.0.1</version>
  <description>configuration and launch files for inhus_navigation</description>

  <maintainer email="anthony.favier@laas.fr">Anthony Favier</maintainer>

  <author email="anthony.favier@laas.fr">Anthony Favier</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <depend>cohan_msgs</depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
