<?xml version="1.0"?>
<package>
  <name>morse_ros</name>
  <version>0.1.2</version>
  <description>the morse_ros package provides a simple scripts and launch files used to run MORSE simulator examples</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- todo: depend on morse? -->

</package>
